--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,3 +18,23 @@ nav{
   align-items: center;
   list-style: none;
 }
+
+.nav{
+  width: 100%;
+}
+
+button{
+  background-color: rgb(208,240,192);
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgba(208,240,192,0.5);
+}
